# soda

./: .clang-format  .gitignore  CMakeLists.txt  Cargo.toml  README.md  a.asm  a.out  enum-debug.py  grammar.txt  hello.soda  program.soda  soda.l  tokens.json
debug-enum-macro/: CMakeLists.txt
debug-enum-macro/src/: main.cpp
include/soda/: ast.hpp  compiler.hpp  fs.hpp  lexer.hpp  logging.hpp  options.hpp  parser.hpp  token.hpp
soda/: CMakeLists.txt  __main__.py  interpreter.py  lexer.py  parser.py  soda.l  token.py  util.py
soda/include/soda/: fs.hpp  lexer.hpp  token.hpp
soda/src/: fs.cpp  lex.yy.cpp  logging.cpp  main.cpp  options.cpp  parser.cpp
src/: compiler.cpp  fs.cpp  lexer.cpp  main.cpp  main.rs  options.cpp  parser.cpp  repl.rs  token.cpp
src/backend/: compiler.rs  eval.rs
src/frontend/: ast.rs  lexer.rs  token.rs
test/: foo.soda  test_lexer.py
